--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,8 @@
 
 :root {
     --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --card-front-color: #281480;
+    --card-back-color: #e5d717;
 }
 
 body {
